--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+*{
+    background-color: black;
+    color: white;
+}
+body{
+    margin: 0;
+   padding: 1rem;
+}
+.container{
+    padding: 1rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.grid{
+display: grid;
+grid-template-columns: auto auto auto auto;
+gap: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav{
+    border-bottom: 0.2rem solid white;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.card{
+   border: 0.1rem solid white;
+   border-radius: 0.5rem;
+   padding: 0.2rem;
+   display: flex;
+   flex-flow:column ;
+   gap: 0.4rem;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.carditem{
+    border-radius: 2rem;
+    padding-bottom: 1rem;
 }
